--- a/about/index.html
+++ b/about/index.html
@@ -1,24 +1,24 @@
 
-<html lang="en"></html>
-<head>
-  <meta property="og:site_name" content="Cuttin Scrap"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="About the Cuttin Scrap Family"/>
-  <meta property="og:description" content="who are we"/>
-  <meta property="og:image" content="www.cuttinscrap.com/static/img/projects/woodland-applique.jpg"/>
-  <meta property="og:published_time" content="January 1, 2018"/>
-  <meta property="og:author" content="Rhiannon Walker"/>
-  <meta name="twitter:card" content="summary"/>
-  <meta property="fb:app_id" content="NA"/>
-  <meta name="twitter:site" content="@cuttinscrap"/>
-  <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-  <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
-  <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
-  <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
-  <title>CuttinScrap</title>
-  <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
+<html lang="en">
+  <head>
+    <title>CuttinScrap</title>
+    <meta property="og:site_name" content="Cuttin Scrap"/>
+    <meta property="og:type" content="blog"/>
+    <meta property="og:title" content="About the Cuttin Scrap Family"/>
+    <meta property="og:description" content="who are we"/>
+    <meta property="og:image" content="www.cuttinscrap.com/static/img/projects/woodland-applique.jpg"/>
+    <meta property="og:published_time" content="January 1, 2018"/>
+    <meta property="og:author" content="Rhiannon Walker"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta property="fb:app_id" content="NA"/>
+    <meta name="twitter:site" content="@cuttinscrap"/>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
+    <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
+    <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
+    <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112023193-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -28,32 +28,34 @@
   gtag('config', 'UA-112023193-1');
 </script>
 
-  <script src="/static/js/nav.js"></script>
-  <script src="/static/js/insta.js"></script>
-  <script src="/static/js/latest_video.js"></script>
-</head>
-<body>
-  <div id="hero">
-    <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    <script src="/static/js/nav.js"></script>
+    <script src="/static/js/insta.js"></script>
+    <script src="/static/js/latest_video.js"></script>
+  </head>
+  <body>
+    <div id="hero">
+      <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    </div>
     <nav class="init">
-      <div id="nav-btn">
-        <div id="ham">☰</div>
-        <div id="x">X</div>
-        <div class="socials">
-          <h6 class="title">Follow Cuttin Scrap</h6>
-          <ul>
-            <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-          </ul>
-        </div>
+      <div class="socials">
+        <h6 class="title">Follow Cuttin Scrap</h6>
+        <ul>
+          <li id="nav-btn">
+            <div id="ham">☰</div>
+            <div id="x">X</div>
+          </li>
+          <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+        </ul>
       </div>
       <div id="site-navigation">
         <ul>
           <li> <a href="/">Home</a></li>
           <li> <a href="/project">Project</a></li>
           <li> <a href="/blog">Blog</a></li>
+          <li> <a href="/downloads">Downloads</a></li>
           <li> <a href="/uses">Uses</a></li>
           <li> <a href="/support">Support</a></li>
           <li> <a href="/about">About</a></li>
@@ -61,38 +63,40 @@
         </ul>
       </div>
     </nav>
-  </div>
-  <div class="card-clear" id="intro">
-  </div>
-  <div id="content">
-    <div class="card">
-      <h1>About us</h1>
-      <p><em>The Cuttin Scrap Family</em></p><img class="profile" src="/static/img/Rhiannon_fun.jpg" alt="Rhiannon"/>
-      <p>I, Rhiannon Walker, am a mom first above all else.  I am a mother to Wyatt, 5, and Ayla, 3.  I graduated Iowa State University with a bachelor’s degree in Child, Adult, and Family Services.  When I graduated I was pregnant with my first born.  My husband, Waylon, and I made the decision to stay home with Wyatt.  Since staying home with Wyatt I have had the privilege to watch him grow and mature. In 2014, Ayla joined us and had quite a few medical concerns for a couple of years after her birth.  Right as she turned two and was getting better I was diagnosed with Atypical Carcinoid Cancer.  That’s when everything took a turn for the worse.  In December 2016, I underwent a sleeve lobectomy of my left lung.  In January 2017, I got very sick and was sent to ICU for 12 rounds of IV antibiotics.  I receive chemo every 28 days.  I have an incurable form of cancer.  Chemo simply reduces the symptoms. Overall, I am more than a cancer patient.  I am a mother, a daughter, and a wife.</p><img class="profile-right" src="/static/img/Waylon.jpg" alt="Waylon"/>
-      <p>Speaking of being a wife, let me introduce you into my husband, Waylon.  Waylon also graduated Iowa State University.  He has a bachelor’s degree in Mechanical Engineering.  He never ceases to amaze me with all of his talents.  Just recently he was able to take his hobby of writing code and make a career out of it at work.  As a matter of fact this entire website was designed by him.  Waylon enjoys playing with our two kids, woodworking, listening to music, listening to podcasts, and watching YouTube channels.  He is always up for learning something new. I absolutely love that quality about him.  Waylon has been my rock through fighting this cancer.  He is always there for me.  I don’t know what the kids and I would do without him.</p><img class="profile" src="/static/img/Wyatt.jpg" alt="Wyatt"/>
-      <p>Our two kids are always a joy to be around, ok not always.  Sometimes they scream and fight.  But those times they are sweet and getting along makes those bad times worth it.  Wyatt and Ayla are constantly learning new things which is so much fun to watch happen.  Wyatt is huge into Minecraft.  He really has found his niche through the game.  I wasn’t sure how I felt about him playing it, but once I realized how it helps him feel calm and organized it makes it all worth it.  Minecraft has even helped him learn about various sediments, how we get different kinds of food, and spelling.  Along with Minecraft, Wyatt likes to color, help in the kitchen, play pretend Minecraft, and watch YouTube videos.  Wyatt has ADHD and we have struggled helping him stay focused and calm, so he doesn’t hurt himself or those around him.  It is important to me to educate people on what ADHD truly means, because I think there is a ton of false information.  We have an amazing pediatrician that helps us keep his medications in check without turning him into a zombie.  We are starting him in Occupational Therapy to help control the outbursts and hopefully find ways to help him cope when his medications aren’t working. </p><img class="profile-right" src="/static/img/Ayla.jpg" alt="Ayla"/>
-      <p>Moving on to Ayla.  Ayla has given us a run for our money.  She was born premature, and struggled with various medical issues.  Ayla has undergone 6 different surgeries.  She is our little trooper.  For the first 2 years of her life she lived with a g-tube, which gave us a way to give her food in a controlled setting.  I know the G-tube was scary for a lot of our family, but we are extremely grateful since it kept her alive.  Ayla struggles with Sensory Processing Disorder.  She is in Occupational Therapy to help work through various situations that most kids would be ok with, but for Ayla her brain takes everything to extreme levels.  Ayla is our little movie lover.  She loves her some Disney and Pixar movies. She loves taking care of her babies, reading books, coloring, and cooking in her pretend kitchen.  She has very mature tastes and likes bitter chocolate.  Ayla is a very smiley, sassy, and opinionated little girl.  She isn’t afraid to tell you when something is not going her way.  She also is our little instigator.  She definitely picks on her older brother with an evil grin on her face.  Don’t be fooled by that smile.</p><img class="profile" src="/static/img/Gizmo.jpg" alt="Gizmo"/>
-      <p>Alongside of our children we have a Terrier/Chihuahua.  He is my buddy.  His name is Gizmo.  Gizmo loves sleeping under the covers.  He rarely barks and does not enjoy walks or playing with toys.  He does like his belly rubs from me.  Gizmo was a rescue.  He was rescued from a single wide trailer with 60 other dogs.  He was the only male left with a tale.  Gizmo has quite a bit of anxiety, but is overall a pretty loving little guy, as long as you have a blanket.</p><img class="profile-right" src="/static/img/Family.jpg" alt=""/>
-      <p>As a parent you learn that each of your kids is completely different, and when it comes to parenting we definetly handle each separately.  I try and stay educated with my children’s different medical needs.  I want to try and help them in any way I can.  Being a parent who is fighting cancer, and dealing with two children who have their own special needs is no easy task, but having Waylon on my side sure does make it more enjoyable.  We strive to take everything one breath at a time!</p>
+    <div id="content">
+      <div class="card">
+        <h1>About us</h1>
+        <p><em>The Cuttin Scrap Family</em></p><img class="profile" src="/static/img/Rhiannon_fun.jpg" alt="Rhiannon"/>
+        <p>I, Rhiannon Walker, am a mom first above all else.  I am a mother to Wyatt, 5, and Ayla, 3.  I graduated Iowa State University with a bachelor’s degree in Child, Adult, and Family Services.  When I graduated I was pregnant with my first born.  My husband, Waylon, and I made the decision to stay home with Wyatt.  Since staying home with Wyatt I have had the privilege to watch him grow and mature. In 2014, Ayla joined us and had quite a few medical concerns for a couple of years after her birth.  Right as she turned two and was getting better I was diagnosed with Atypical Carcinoid Cancer.  That’s when everything took a turn for the worse.  In December 2016, I underwent a sleeve lobectomy of my left lung.  In January 2017, I got very sick and was sent to ICU for 12 rounds of IV antibiotics.  I receive chemo every 28 days.  I have an incurable form of cancer.  Chemo simply reduces the symptoms. Overall, I am more than a cancer patient.  I am a mother, a daughter, and a wife.</p><img class="profile-right" src="/static/img/Waylon.jpg" alt="Waylon"/>
+        <p>Speaking of being a wife, let me introduce you into my husband, Waylon.  Waylon also graduated Iowa State University.  He has a bachelor’s degree in Mechanical Engineering.  He never ceases to amaze me with all of his talents.  Just recently he was able to take his hobby of writing code and make a career out of it at work.  As a matter of fact this entire website was designed by him.  Waylon enjoys playing with our two kids, woodworking, listening to music, listening to podcasts, and watching YouTube channels.  He is always up for learning something new. I absolutely love that quality about him.  Waylon has been my rock through fighting this cancer.  He is always there for me.  I don’t know what the kids and I would do without him.</p><img class="profile" src="/static/img/Wyatt.jpg" alt="Wyatt"/>
+        <p>Our two kids are always a joy to be around, ok not always.  Sometimes they scream and fight.  But those times they are sweet and getting along makes those bad times worth it.  Wyatt and Ayla are constantly learning new things which is so much fun to watch happen.  Wyatt is huge into Minecraft.  He really has found his niche through the game.  I wasn’t sure how I felt about him playing it, but once I realized how it helps him feel calm and organized it makes it all worth it.  Minecraft has even helped him learn about various sediments, how we get different kinds of food, and spelling.  Along with Minecraft, Wyatt likes to color, help in the kitchen, play pretend Minecraft, and watch YouTube videos.  Wyatt has ADHD and we have struggled helping him stay focused and calm, so he doesn’t hurt himself or those around him.  It is important to me to educate people on what ADHD truly means, because I think there is a ton of false information.  We have an amazing pediatrician that helps us keep his medications in check without turning him into a zombie.  We are starting him in Occupational Therapy to help control the outbursts and hopefully find ways to help him cope when his medications aren’t working. </p><img class="profile-right" src="/static/img/Ayla.jpg" alt="Ayla"/>
+        <p>Moving on to Ayla.  Ayla has given us a run for our money.  She was born premature, and struggled with various medical issues.  Ayla has undergone 6 different surgeries.  She is our little trooper.  For the first 2 years of her life she lived with a g-tube, which gave us a way to give her food in a controlled setting.  I know the G-tube was scary for a lot of our family, but we are extremely grateful since it kept her alive.  Ayla struggles with Sensory Processing Disorder.  She is in Occupational Therapy to help work through various situations that most kids would be ok with, but for Ayla her brain takes everything to extreme levels.  Ayla is our little movie lover.  She loves her some Disney and Pixar movies. She loves taking care of her babies, reading books, coloring, and cooking in her pretend kitchen.  She has very mature tastes and likes bitter chocolate.  Ayla is a very smiley, sassy, and opinionated little girl.  She isn’t afraid to tell you when something is not going her way.  She also is our little instigator.  She definitely picks on her older brother with an evil grin on her face.  Don’t be fooled by that smile.</p><img class="profile" src="/static/img/Gizmo.jpg" alt="Gizmo"/>
+        <p>Alongside of our children we have a Terrier/Chihuahua.  He is my buddy.  His name is Gizmo.  Gizmo loves sleeping under the covers.  He rarely barks and does not enjoy walks or playing with toys.  He does like his belly rubs from me.  Gizmo was a rescue.  He was rescued from a single wide trailer with 60 other dogs.  He was the only male left with a tale.  Gizmo has quite a bit of anxiety, but is overall a pretty loving little guy, as long as you have a blanket.</p><img class="profile-right" src="/static/img/Family.jpg" alt=""/>
+        <p>As a parent you learn that each of your kids is completely different, and when it comes to parenting we definetly handle each separately.  I try and stay educated with my children’s different medical needs.  I want to try and help them in any way I can.  Being a parent who is fighting cancer, and dealing with two children who have their own special needs is no easy task, but having Waylon on my side sure does make it more enjoyable.  We strive to take everything one breath at a time!</p>
+      </div>
+      <div id="blog-promo">
+      </div>
+      <div class="card" id="instagram">
+        <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
+        <p><em>follow us</em></p>
+        <div id="instafeed"></div>
+      </div>
     </div>
-  </div>
-  <div id="blog-promo">
-  </div>
-  <div class="card" id="instagram">
-    <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
-    <p><em>follow us</em></p>
-    <div id="instafeed"></div>
-  </div>
-  <footer>
-    <p><em>Share your scraps with us</em></p>
-    <div class="socials">
-      <h6 class="title">Follow Cuttin Scrap</h6>
-      <ul>
-        <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-      </ul>
-    </div>
-  </footer>
-</body>
+    <footer>
+      <p><em>Share your scraps with us</em></p>
+      <div class="socials">
+        <h6 class="title">Follow Cuttin Scrap</h6>
+        <ul>
+          <li id="nav-btn">
+            <div id="ham">☰</div>
+            <div id="x">X</div>
+          </li>
+          <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
+</html>
