--- a/downloads/index.html
+++ b/downloads/index.html
@@ -4,9 +4,9 @@
     <title>CuttinScrap</title>
     <meta property="og:site_name" content="Cuttin Scrap"/>
     <meta property="og:type" content="blog"/>
-    <meta property="og:title" content="Diving Deep"/>
-    <meta property="og:description" content="I am an imperfect person.  I am terrified of making new friends.  I love going out.  I am a negative person.  I can't write on wrinkled paper."/>
-    <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
+    <meta property="og:title" content="Downloads"/>
+    <meta property="og:description" content="Download patterns by Cuttin Scrap"/>
+    <meta property="og:image" content=""/>
     <meta property="og:published_time" content=""/>
     <meta property="og:author" content="Rhiannon Walker"/>
     <meta name="twitter:card" content="summary"/>
@@ -18,7 +18,6 @@
     <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
     <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
     <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
-    <meta name="blog:n" content="16"/>
     <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112023193-1"></script>
 <script>
@@ -64,42 +63,15 @@
         </ul>
       </div>
     </nav>
-    <div class="card-clear" id="intro"></div>
-    <h1>Personal Blog</h1>
-    <p>I am a surviving cancer patient in my everyday life. Cancer is a scary word, but attitude is everything.  What type of cancer you ask?  I have Atypical Carcinoid Cancer of the lung.  Rare, I know.  Cutting Scrap was started as a way to keep my mind busy and help me feel productive.  I will try to keep my crafting and my medical updates separate, but I am only human.  In this blog I will post medical updates, family update, and just venting updates.  This blog is my release.  I don’t need opinions on different treatments for my disease. With that being said, support and loving thoughts are terrific!</p>
     <div id="content">
       <div class="card">
-           </div>
-      <div class="card" id="blog-map">
-        <h1>Other Posts</h1>
-        <p><em>personal blog</em></p>
-        <ul class="no-pad">
-          <li><a href="/blog/1">November 25, 2016</a></li>
-          <li><a href="/blog/2">November 30, 2016</a></li>
-          <li><a href="/blog/3">December 5, 2016</a></li>
-          <li><a href="/blog/4">December 11, 2016</a></li>
-          <li><a href="/blog/5">December 17, 2016</a></li>
-          <li><a href="/blog/6">December 23, 2016</a></li>
-          <li><a href="/blog/7">January 2, 2017</a></li>
-          <li><a href="/blog/8">January 30, 2017</a></li>
-          <li><a href="/blog/9">February 10, 2017</a></li>
-          <li><a href="/blog/10">March 3, 2017</a></li>
-          <li><a href="/blog/11">March 15, 2017</a></li>
-          <li><a href="/blog/12">March 24, 2017</a></li>
-          <li><a href="/blog/13">May 5, 2017</a></li>
-          <li><a href="/blog/14">May 26, 2017</a></li>
-          <li><a href="/blog/15">July 4, 2017</a></li>
-          <li><a href="/blog/16"></a></li>
-          <li><a href="/blog/17">December 28, 2017</a></li>
-          <li><a href="/blog/18">January 4, 2018</a></li>
-          <li><a href="/blog/19">January 4, 2018</a></li>
-          <li><a href="/blog/20">January 25, 2018</a></li>
-          <li><a href="/blog/21">February 9, 2018</a></li>
-          <li><a href="/blog/22">February 8, 2018</a></li>
-          <li><a href="/blog/23">March 19, 2018</a></li>
-          <li><a href="/blog/24">March 27, 2018</a></li>
-          <li><a href="/blog/25">April 2, 2018</a></li>
-        </ul>
+        <h4>Downloads</h4>
+        <p> <em>Free Patterns By Cuttin Scrap</em></p>
+        <div class="flex">
+          <div class="item">
+            <p>Stars IN Stripes Quilt</p><a href="/downloads/block_layouts/Stars_IN_Stripes_PDF.pdf" title="Stars_IN_Stripes_PDF"><img src="/static/img/thumbnails/Stars_IN_Stripes_PDF_100.png" alt=""/></a>
+          </div>
+        </div>
       </div>
       <div id="blog-promo">
       </div>
@@ -108,28 +80,6 @@
         <p><em>follow us</em></p>
         <div id="instafeed"></div>
       </div>
-    </div>
-    <div id="disqus">
-      <script id="dsq-count-scr" src="//cuttinscrap.disqus.com/count.js" async="async"></script>
-      <div id="disqus_thread"></div>
-      <script>
-         /**
-         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-         /*
-         var disqus_config = function () {
-         this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-         this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-         };
-        */ 
-         (function() { // DON'T EDIT BELOW THIS LINE
-         var d = document, s = d.createElement('script');
-         s.src = 'https://cuttinscrap.disqus.com/embed.js';
-         s.setAttribute('data-timestamp', +new Date());
-         (d.head || d.body).appendChild(s);
-         })();
-      </script>
-      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
     <footer>
       <p><em>Share your scraps with us</em></p>
