--- a/project/1/index.html
+++ b/project/1/index.html
@@ -1,25 +1,25 @@
 
-<html lang="en"></html>
-<head>
-  <meta property="og:site_name" content="Cuttin Scrap"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Woodland Applique"/>
-  <meta property="og:description" content="When I got the news that my close friend is having a baby, I knew right away that I wanted to make a quilt for her baby shower. I was so excited to take on this task, but at the same time I was worried it would not be done in time. My previous project took me 3 years…seriously!!! That’s why I went on a search for an easy method to making a cute project."/>
-  <meta property="og:image" content="www.cuttinscrap.com/static/img/projects/woodland-applique.jpg"/>
-  <meta property="og:published_time" content="July 1, 2016"/>
-  <meta property="og:author" content="Rhiannon Walker"/>
-  <meta name="twitter:card" content="summary"/>
-  <meta property="fb:app_id" content="NA"/>
-  <meta name="twitter:site" content="@cuttinscrap"/>
-  <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-  <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
-  <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
-  <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
-  <meta name="project:n" content="1"/>
-  <title>CuttinScrap</title>
-  <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
+<html lang="en">
+  <head>
+    <title>CuttinScrap</title>
+    <meta property="og:site_name" content="Cuttin Scrap"/>
+    <meta property="og:type" content="blog"/>
+    <meta property="og:title" content="Woodland Applique"/>
+    <meta property="og:description" content="When I got the news that my close friend is having a baby, I knew right away that I wanted to make a quilt for her baby shower. I was so excited to take on this task, but at the same time I was worried it would not be done in time. My previous project took me 3 years…seriously!!! That’s why I went on a search for an easy method to making a cute project."/>
+    <meta property="og:image" content="www.cuttinscrap.com/static/img/projects/woodland-applique.jpg"/>
+    <meta property="og:published_time" content="July 1, 2016"/>
+    <meta property="og:author" content="Rhiannon Walker"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta property="fb:app_id" content="NA"/>
+    <meta name="twitter:site" content="@cuttinscrap"/>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
+    <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
+    <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
+    <meta name="project:n" content="1"/>
+    <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112023193-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -29,32 +29,34 @@
   gtag('config', 'UA-112023193-1');
 </script>
 
-  <script src="/static/js/nav.js"></script>
-  <script src="/static/js/insta.js"></script>
-  <script src="/static/js/latest_video.js"></script>
-</head>
-<body>
-  <div id="hero">
-    <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    <script src="/static/js/nav.js"></script>
+    <script src="/static/js/insta.js"></script>
+    <script src="/static/js/latest_video.js"></script>
+  </head>
+  <body>
+    <div id="hero">
+      <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    </div>
     <nav class="init">
-      <div id="nav-btn">
-        <div id="ham">☰</div>
-        <div id="x">X</div>
-        <div class="socials">
-          <h6 class="title">Follow Cuttin Scrap</h6>
-          <ul>
-            <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-          </ul>
-        </div>
+      <div class="socials">
+        <h6 class="title">Follow Cuttin Scrap</h6>
+        <ul>
+          <li id="nav-btn">
+            <div id="ham">☰</div>
+            <div id="x">X</div>
+          </li>
+          <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+        </ul>
       </div>
       <div id="site-navigation">
         <ul>
           <li> <a href="/">Home</a></li>
           <li> <a href="/project">Project</a></li>
           <li> <a href="/blog">Blog</a></li>
+          <li> <a href="/downloads">Downloads</a></li>
           <li> <a href="/uses">Uses</a></li>
           <li> <a href="/support">Support</a></li>
           <li> <a href="/about">About</a></li>
@@ -62,12 +64,10 @@
         </ul>
       </div>
     </nav>
-  </div>
-  <div class="card-clear" id="intro">
-  </div>
-  <div id="content">
-    <div class="card">
-         <h1>Woodland Applique</h1>
+    <div class="card-clear" id="intro"></div>
+    <div id="content">
+      <div class="card">
+           <h1>Woodland Applique</h1>
 <p><em>July 1, 2015 -  Always Learning New Techniques</em></p>
 <p><img src="/static/img/Projects/woodland-applique.jpg" alt="woodland creatures"></p>
 <p>When I got the news that my close friend is having a baby, I knew right away that I wanted to make a quilt for her baby shower.  I was so excited to take on this task, but at the same time I was worried it would not be done in time. My previous project took me 3 years…seriously!!! That’s why I went on a search for an easy method to making a cute project. I came across this Craftsy class.  This is not sponsored by the way, just what I used.  The official title was <strong><a href="https://www.craftsy.com/quilting/classes/fusible-appliqu-made-easy/44985">Fusible Applique Made Easy</a></strong> by <em><a href="https://www.shinyhappyworld.com/aboutcontact">Wendi Gratz</a></em></p>
@@ -81,57 +81,62 @@
 <p>My friend loves it.  It turned out so cute, and really turned me onto wanting to do some more applique in the future.  I got to go visit her after she had her baby and her little man looks adorable on all of those animal faces.</p>
 <p>Sorry there isn’t a ton of pictures of the construction.  This project was made over a year ago, before Cuttin Scrap was in my mind.  I can’t wait to bring you all on this journey of crafting with me, where the road is never straight!  It’s time to clean up the scrap, and make way for the next project.  Until Next Time!</p>
 
+      </div>
+      <div class="card" id="blog-map">
+        <h1>Other Projects</h1>
+        <p><em> </em></p>
+        <ul>
+          <li><a href="/project/1">Woodland Applique</a></li>
+          <li><a href="/project/2">Crown Bag Quilt</a></li>
+          <li><a href="/project/3">Applique Wall Hanging</a></li>
+          <li><a href="/project/4">Weighted Blanket</a></li>
+        </ul>
+      </div>
+      <div id="blog-promo">
+      </div>
+      <div class="card" id="instagram">
+        <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
+        <p><em>follow us</em></p>
+        <div id="instafeed"></div>
+      </div>
     </div>
-  </div>
-  <div class="card" id="blog-map">
-    <h1>Other Projects</h1>
-    <p><em> </em></p>
-    <ul>
-      <li><a href="/project/1">Woodland Applique</a></li>
-      <li><a href="/project/2">Crown Bag Quilt</a></li>
-      <li><a href="/project/3">Applique Wall Hanging</a></li>
-      <li><a href="/project/4">Weighted Blanket</a></li>
-    </ul>
-  </div>
-  <div id="blog-promo">
-  </div>
-  <div class="card" id="instagram">
-    <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
-    <p><em>follow us</em></p>
-    <div id="instafeed"></div>
-  </div>
-  <div id="disqus">
-    <script id="dsq-count-scr" src="//cuttinscrap.disqus.com/count.js" async="async"></script>
-    <div id="disqus_thread"></div>
-    <script>
-       /**
-       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-       /*
-       var disqus_config = function () {
-       this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-       this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-       };
-      */ 
-       (function() { // DON'T EDIT BELOW THIS LINE
-       var d = document, s = d.createElement('script');
-       s.src = 'https://cuttinscrap.disqus.com/embed.js';
-       s.setAttribute('data-timestamp', +new Date());
-       (d.head || d.body).appendChild(s);
-       })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  </div>
-  <footer>
-    <p><em>Share your scraps with us</em></p>
-    <div class="socials">
-      <h6 class="title">Follow Cuttin Scrap</h6>
-      <ul>
-        <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-      </ul>
+    <div id="disqus">
+      <script id="dsq-count-scr" src="//cuttinscrap.disqus.com/count.js" async="async"></script>
+      <div id="disqus_thread"></div>
+      <script>
+         /**
+         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+         /*
+         var disqus_config = function () {
+         this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+         this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+         };
+        */ 
+         (function() { // DON'T EDIT BELOW THIS LINE
+         var d = document, s = d.createElement('script');
+         s.src = 'https://cuttinscrap.disqus.com/embed.js';
+         s.setAttribute('data-timestamp', +new Date());
+         (d.head || d.body).appendChild(s);
+         })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
-  </footer>
-</body>
+    <footer>
+      <p><em>Share your scraps with us</em></p>
+      <div class="socials">
+        <h6 class="title">Follow Cuttin Scrap</h6>
+        <ul>
+          <li id="nav-btn">
+            <div id="ham">☰</div>
+            <div id="x">X</div>
+          </li>
+          <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
+</html>
