--- a/support/index.html
+++ b/support/index.html
@@ -1,24 +1,24 @@
 
-<html lang="en"></html>
-<head>
-  <meta property="og:site_name" content="Cuttin Scrap"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Let's Start Cuttin Scrap"/>
-  <meta property="og:description" content="When crafting from the heart, perfection is not the main goal. Here at Cuttin Scrap I push towards having fun and using what you have around the house. These projects are not meant for Muffy McPerfect Pants, but for the everyday crafter. I, Rhiannon Walker, fight Atypical Carcinoid Cancer of the lungs everyday, and use crafting as my way to let loose. Come on a journey with me, where the road is never straigh"/>
-  <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
-  <meta property="og:published_time" content=""/>
-  <meta property="og:author" content="Rhiannon Walker"/>
-  <meta name="twitter:card" content="summary"/>
-  <meta property="fb:app_id" content="NA"/>
-  <meta name="twitter:site" content="@cuttinscrap"/>
-  <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-  <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
-  <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
-  <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
-  <title>CuttinScrap</title>
-  <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
+<html lang="en">
+  <head>
+    <title>CuttinScrap</title>
+    <meta property="og:site_name" content="Cuttin Scrap"/>
+    <meta property="og:type" content="blog"/>
+    <meta property="og:title" content="Let's Start Cuttin Scrap"/>
+    <meta property="og:description" content="When crafting from the heart, perfection is not the main goal. Here at Cuttin Scrap I push towards having fun and using what you have around the house. These projects are not meant for Muffy McPerfect Pants, but for the everyday crafter. I, Rhiannon Walker, fight Atypical Carcinoid Cancer of the lungs everyday, and use crafting as my way to let loose. Come on a journey with me, where the road is never straigh"/>
+    <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
+    <meta property="og:published_time" content=""/>
+    <meta property="og:author" content="Rhiannon Walker"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta property="fb:app_id" content="NA"/>
+    <meta name="twitter:site" content="@cuttinscrap"/>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
+    <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
+    <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
+    <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112023193-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -28,32 +28,34 @@
   gtag('config', 'UA-112023193-1');
 </script>
 
-  <script src="/static/js/nav.js"></script>
-  <script src="/static/js/insta.js"></script>
-  <script src="/static/js/latest_video.js"></script>
-</head>
-<body>
-  <div id="hero">
-    <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    <script src="/static/js/nav.js"></script>
+    <script src="/static/js/insta.js"></script>
+    <script src="/static/js/latest_video.js"></script>
+  </head>
+  <body>
+    <div id="hero">
+      <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    </div>
     <nav class="init">
-      <div id="nav-btn">
-        <div id="ham">☰</div>
-        <div id="x">X</div>
-        <div class="socials">
-          <h6 class="title">Follow Cuttin Scrap</h6>
-          <ul>
-            <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-          </ul>
-        </div>
+      <div class="socials">
+        <h6 class="title">Follow Cuttin Scrap</h6>
+        <ul>
+          <li id="nav-btn">
+            <div id="ham">☰</div>
+            <div id="x">X</div>
+          </li>
+          <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+        </ul>
       </div>
       <div id="site-navigation">
         <ul>
           <li> <a href="/">Home</a></li>
           <li> <a href="/project">Project</a></li>
           <li> <a href="/blog">Blog</a></li>
+          <li> <a href="/downloads">Downloads</a></li>
           <li> <a href="/uses">Uses</a></li>
           <li> <a href="/support">Support</a></li>
           <li> <a href="/about">About</a></li>
@@ -61,39 +63,41 @@
         </ul>
       </div>
     </nav>
-  </div>
-  <div class="card-clear" id="intro">
-  </div>
-  <div id="content">
-    <h1>Support Us</h1>
-    <p>Help keep the channel going so that we can keep producing more content.</p>
-    <div id="Support-content">
-      <div class="Support" id="Patreon-Support"><a href="https://www.patreon.com/bePatron?u=8895903" data-patreon-widget-type="become-patron-button">Become a Patron!</a>
-        <script async="" src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+    <div id="content">
+      <h1>Support Us</h1>
+      <p>Help keep the channel going so that we can keep producing more content.</p>
+      <div id="Support-content">
+        <div class="Support" id="Patreon-Support"><a href="https://www.patreon.com/bePatron?u=8895903" data-patreon-widget-type="become-patron-button">Become a Patron!</a>
+          <script async="" src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+        </div>
+        <div class="Support" id="Amazon-Support"></div>
       </div>
-      <div class="Support" id="Amazon-Support"></div>
+      <div id="gofundme">
+        <p>Support Rhiannon in her journy to battle cancer <a class="gofundme" href="https://www.gofundme.com/Aylasmedicalfund" title="gofundme">gofundme</a></p>
+      </div>
+      <div id="blog-promo">
+      </div>
+      <div class="card" id="instagram">
+        <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
+        <p><em>follow us</em></p>
+        <div id="instafeed"></div>
+      </div>
     </div>
-    <div id="gofundme">
-      <p>Support Rhiannon in her journy to battle cancer <a class="gofundme" href="https://www.gofundme.com/Aylasmedicalfund" title="gofundme">gofundme</a></p>
-    </div>
-  </div>
-  <div id="blog-promo">
-  </div>
-  <div class="card" id="instagram">
-    <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
-    <p><em>follow us</em></p>
-    <div id="instafeed"></div>
-  </div>
-  <footer>
-    <p><em>Share your scraps with us</em></p>
-    <div class="socials">
-      <h6 class="title">Follow Cuttin Scrap</h6>
-      <ul>
-        <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-      </ul>
-    </div>
-  </footer>
-</body>
+    <footer>
+      <p><em>Share your scraps with us</em></p>
+      <div class="socials">
+        <h6 class="title">Follow Cuttin Scrap</h6>
+        <ul>
+          <li id="nav-btn">
+            <div id="ham">☰</div>
+            <div id="x">X</div>
+          </li>
+          <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
+</html>
