--- a/uses/index.html
+++ b/uses/index.html
@@ -1,24 +1,24 @@
 
-<html lang="en"></html>
-<head>
-  <meta property="og:site_name" content="Cuttin Scrap"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:title" content="Uses"/>
-  <meta property="og:description" content="What We Use at Cuttin Scrap"/>
-  <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
-  <meta property="og:published_time" content="January 1, 2018"/>
-  <meta property="og:author" content="Rhiannon Walker"/>
-  <meta name="twitter:card" content="summary"/>
-  <meta property="fb:app_id" content="NA"/>
-  <meta name="twitter:site" content="@cuttinscrap"/>
-  <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-  <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
-  <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
-  <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
-  <title>CuttinScrap</title>
-  <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
+<html lang="en">
+  <head>
+    <title>CuttinScrap</title>
+    <meta property="og:site_name" content="Cuttin Scrap"/>
+    <meta property="og:type" content="blog"/>
+    <meta property="og:title" content="Uses"/>
+    <meta property="og:description" content="What We Use at Cuttin Scrap"/>
+    <meta property="og:image" content="http://www.cuttinscrap.com/static/img/logo/cuttin%20scrap%20final%20white.jpg"/>
+    <meta property="og:published_time" content="January 1, 2018"/>
+    <meta property="og:author" content="Rhiannon Walker"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta property="fb:app_id" content="NA"/>
+    <meta name="twitter:site" content="@cuttinscrap"/>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <meta name="p:domain_verify" content="56f808442edb403cb993e5d0da778344"/>
+    <meta name="google-site-verification" content="zjlaVrUj_Wy5cgrDUsm2e2cdJyQbatv5tv5tyUEp8oOLi"/>
+    <link rel="icon" type="image/png" href="/static/img/scissors.png"/>
+    <link rel="stylesheet" href="/static/css/main.css"/><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112023193-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -28,32 +28,34 @@
   gtag('config', 'UA-112023193-1');
 </script>
 
-  <script src="/static/js/nav.js"></script>
-  <script src="/static/js/insta.js"></script>
-  <script src="/static/js/latest_video.js"></script>
-</head>
-<body>
-  <div id="hero">
-    <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    <script src="/static/js/nav.js"></script>
+    <script src="/static/js/insta.js"></script>
+    <script src="/static/js/latest_video.js"></script>
+  </head>
+  <body>
+    <div id="hero">
+      <div id="logo"><a href="/"><img src="/static/img/logo/cuttinscrap.png" -="-" alt="scissors"/></a></div>
+    </div>
     <nav class="init">
-      <div id="nav-btn">
-        <div id="ham">☰</div>
-        <div id="x">X</div>
-        <div class="socials">
-          <h6 class="title">Follow Cuttin Scrap</h6>
-          <ul>
-            <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-          </ul>
-        </div>
+      <div class="socials">
+        <h6 class="title">Follow Cuttin Scrap</h6>
+        <ul>
+          <li id="nav-btn">
+            <div id="ham">☰</div>
+            <div id="x">X</div>
+          </li>
+          <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+        </ul>
       </div>
       <div id="site-navigation">
         <ul>
           <li> <a href="/">Home</a></li>
           <li> <a href="/project">Project</a></li>
           <li> <a href="/blog">Blog</a></li>
+          <li> <a href="/downloads">Downloads</a></li>
           <li> <a href="/uses">Uses</a></li>
           <li> <a href="/support">Support</a></li>
           <li> <a href="/about">About</a></li>
@@ -61,92 +63,94 @@
         </ul>
       </div>
     </nav>
-  </div>
-  <div class="card-clear" id="intro">
     <h1>Tools We Use</h1>
     <p><em>at Cuttin Scrap</em></p>
-  </div>
-  <div id="content">
-    <div id="uses">
-      <div class="card">
-        <h4>Cutting</h4>
-        <p><em>for cuttin scrap</em></p>
-        <ul>
-          <li>Rowenta Effective Comfort – Iron</li>
-          <li>Gingher 8 Inch Spring Action Dressmaker Shears</li>
-          <li>Ginher small</li>
-          <li>Ginher Rotary Cutter</li>
-          <li>June Tailor Inc Cutting Mat</li>
-          <li>Friskars Pinking Shears </li>
-          <li>June Tailor Inc Shape Cut JT-796</li>
-          <li>June Tailor Inc Get Squared JT-741</li>
-          <li>Fiskars Donna Dewberry Collection 18in Ruler</li>
-        </ul>
+    <div id="content">
+      <div id="uses">
+        <div class="card">
+          <h4>Cutting</h4>
+          <p><em>for cuttin scrap</em></p>
+          <ul>
+            <li>Rowenta Effective Comfort – Iron</li>
+            <li>Gingher 8 Inch Spring Action Dressmaker Shears</li>
+            <li>Ginher small</li>
+            <li>Ginher Rotary Cutter</li>
+            <li>June Tailor Inc Cutting Mat</li>
+            <li>Friskars Pinking Shears </li>
+            <li>June Tailor Inc Shape Cut JT-796</li>
+            <li>June Tailor Inc Get Squared JT-741</li>
+            <li>Fiskars Donna Dewberry Collection 18in Ruler</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h4>Sewing</h4>
+          <p><em>for putting it back together</em></p>
+          <ul>
+            <li>Brother Pacesetter PS-3700 – machine</li>
+            <li>Quilters Touch Machingers Gloves</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h4>notions</h4>
+          <p><em>for buttoning</em></p>
+          <ul>
+            <li>snap buttons</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h4>assembly</h4>
+          <p><em>for temporaty hold</em></p>
+          <ul>
+            <li>clips</li>
+            <li>Schmetz Jersey Needles 130/705 H SUK 80/12</li>
+            <li>Schmetz Universal 130/705 H 15x1H 80/12</li>
+            <li>Universal Feet Kit - SMBalways</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h4>Furniture</h4>
+          <p><em>for comfort</em></p>
+          <ul>
+            <li>Chair</li>
+            <li>Sewing Table</li>
+            <li>Ironing Table</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h4>Camera</h4>
+          <p><em>for filming</em></p>
+          <ul>
+            <li>Sony NEX5</li>
+            <li>LG V30</li>
+            <li>Tripod</li>
+            <li>lighting</li>
+            <li> </li>
+          </ul>
+        </div>
       </div>
-      <div class="card">
-        <h4>Sewing</h4>
-        <p><em>for putting it back together</em></p>
-        <ul>
-          <li>Brother Pacesetter PS-3700 – machine</li>
-          <li>Quilters Touch Machingers Gloves</li>
-        </ul>
+      <div id="blog-promo">
       </div>
-      <div class="card">
-        <h4>notions</h4>
-        <p><em>for buttoning</em></p>
-        <ul>
-          <li>snap buttons</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h4>assembly</h4>
-        <p><em>for temporaty hold</em></p>
-        <ul>
-          <li>clips</li>
-          <li>Schmetz Jersey Needles 130/705 H SUK 80/12</li>
-          <li>Schmetz Universal 130/705 H 15x1H 80/12</li>
-          <li>Universal Feet Kit - SMBalways</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h4>Furniture</h4>
-        <p><em>for comfort</em></p>
-        <ul>
-          <li>Chair</li>
-          <li>Sewing Table</li>
-          <li>Ironing Table</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h4>Camera</h4>
-        <p><em>for filming</em></p>
-        <ul>
-          <li>Sony NEX5</li>
-          <li>LG V30</li>
-          <li>Tripod</li>
-          <li>lighting</li>
-          <li> </li>
-        </ul>
+      <div class="card" id="instagram">
+        <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
+        <p><em>follow us</em></p>
+        <div id="instafeed"></div>
       </div>
     </div>
-  </div>
-  <div id="blog-promo">
-  </div>
-  <div class="card" id="instagram">
-    <h1><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i> <span style="font-size:1rem;vertical-align:middle;">|</span> CuttinScrap</a></h1>
-    <p><em>follow us</em></p>
-    <div id="instafeed"></div>
-  </div>
-  <footer>
-    <p><em>Share your scraps with us</em></p>
-    <div class="socials">
-      <h6 class="title">Follow Cuttin Scrap</h6>
-      <ul>
-        <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-      </ul>
-    </div>
-  </footer>
-</body>
+    <footer>
+      <p><em>Share your scraps with us</em></p>
+      <div class="socials">
+        <h6 class="title">Follow Cuttin Scrap</h6>
+        <ul>
+          <li id="nav-btn">
+            <div id="ham">☰</div>
+            <div id="x">X</div>
+          </li>
+          <li><a href="https://www.instagram.com/cuttin.scrap/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCg7ZCfygUJMoMC6AcfIaH1A"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/cuttinscrap/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/cuttinscrap/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
+</html>
